pkg/front_end/testcases/general/issue49357a.dart.strong.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/general/issue49357a.dart:13:33: Error: Can't find '}' to match '{'.
//     for (final element in list) {
//                                 ^
//
// pkg/front_end/testcases/general/issue49357a.dart:5:26: Error: Type 'B' not found.
// abstract class A extends B {
//                          ^
//
import self as self;
import "dart:core" as core;

abstract class A extends core::Object {
  constructor •({required invalid-type field}) → self::A
    : invalid-initializer "pkg/front_end/testcases/general/issue49357a.dart:6:3: Error: Can't use 'new' because it is declared more than once.
  A({
  ^"
    ;
}
class C extends core::Object {
  synthetic constructor •() → self::C
    : super core::Object::•()
    ;
  method method(dynamic list) → void {
    {
      synthesized core::Iterator<dynamic> :sync-for-iterator = (list as{TypeError,ForDynamic} core::Iterable<dynamic>).{core::Iterable::iterator}{core::Iterator<dynamic>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic element = :sync-for-iterator.{core::Iterator::current}{dynamic};
        {}
      }
    }
  }
}
